--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
 
   <nav class="navbar bg-body-tertiary">
+    <div class="container">
       <a class="navbar-brand" href="#">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a6/Logo_NIKE.svg/1200px-Logo_NIKE.svg.png" alt="Nike" height="24">
       </a>
@@ -44,7 +45,6 @@
     </button>
   </div>
   
-
   <div class="accordion col-4" id="accordionExample">
     <div class="accordion-item">
       <h2 class="accordion-header">
@@ -58,7 +58,6 @@
         </div>
       </div>
     </div>
-  </div>
     <div class="accordion-item">
       <h2 class="accordion-header">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -83,10 +82,11 @@
         </div>
       </div>
     </div>
+</div>
   
 
   <h1>Shop Shoes</h1>
-<div class="container"></div>
+<div class="row">
   <div class="card col-3">
     <img src="https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/31b6d072-9844-4553-bd5d-92beed6038e1/air-jordan-1-retro-high-og-yellow-ochre-mens-shoes-JHpxkn.png" class="card-img-top" alt="Nike sneaker">
     <div class="card-body">
@@ -119,7 +119,7 @@
       <h5 class="card-title">$210</h5>
     </div>
   </div>
-
+</div>
   <!-- Link Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
